objects/BMCServiceDesk__SLA_Account_Link__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SLA Account Links</relationshipLabel>
        <relationshipName>SLA_Account_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA__c</fullName>
        <label>SLA</label>
        <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
        <relationshipLabel>SLA Account Links</relationshipLabel>
        <relationshipName>SLA_Account_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Account_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal field - Stores &lt;SLA id&gt;_&lt;Account id&gt; unique combination. Value should not be altered externally.</description>
        <label>SLA_Account_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>